fix(date-picker): mark style as important to prevent misalignment

--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -4,7 +4,7 @@
     position relative
     text-align left
     *
-        box-sizing border-box
+        box-sizing border-box !important
 
 .vdp-datepicker__calendar
     position absolute
